2006-05-12  Ales Hakl  <ales at hakl dot net>

	* src/native.c: for-each and map functions
	map works

2006-05-08  Ales Hakl  <ales at hakl dot net>

	* src/native.c: string->symbol and symbol->string

	* src/object.h (TYPE_CHECK): check for nil

	* src/native.c: string->object and object->string

2006-05-01  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h (DFSCH_DISCARD_ARG): Macro for unneeded arguments
	(like env in some macros/forms)

	* src/control.c (dfsch__control_register): split native.c to
	native and control.

	* src/native.c (native_form_let): named-let construct

2006-04-23  Ales Hakl  <ales at hakl dot net>

	* src/stream.c (tokenizer_process): create true object from cache

	* src/dfsch.c: Removed static declaration of ascii_strcasecmp

	* src/stream.c (tokenizer_process): Special case for unreadable objects

	* src/number.c (dfsch_make_number_from_string): At least some
	support for non-decimal numbers

	* src/stream.c (tokenizer_process): support for boolean and
	character escapes
	(tokenizer_process): case insensitive character names
	(dispatch_atom): Signal error on invalid number

2006-04-22  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: tail escape descriptor should (probably) be
	declared volatile

	* src/strings.c: rename utf8-substring to substring-utf8
	Removed debugging code
	Fixed some warnings

2006-04-19  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (string_write): Better string escaping.
	(dfsch_list_2_string_utf8): list->string-utf8 function
	(utf8_ref_cb): Fixed.

2006-04-18  Ales Hakl  <ales at hakl dot net>

	* src/strings.c: Escape all characters < 32, list->string function

2006-04-17  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_2_list): string->list function
	(dfsch_string_utf8_2_list): string-utf8->list function

	* src/dfsch.c (string_hash): Slightly simplified
	(lookup_symbol): Faster and locale independent lookup

2006-04-16  Ales Hakl  <ales at hakl dot net>
